log
Fri Apr  8 11:44:02 HSP 2022: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
hashmap.c:60:14: error: statement with no effect [-Werror=unused-value]
     nuevoMapa->buckets;
     ~~~~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3c020e0
Fri Apr  8 11:44:48 HSP 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
e9f232f
Fri Apr  8 11:45:20 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
13e04e4
Fri Apr  8 11:46:08 HSP 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
test.c: In function 'createMap':
hashmap.c:59:28: error: 'nuevoMapa' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         nuevoMapa->buckets = NULL;
                            ^
cc1.exe: all warnings being treated as errors
Compilation failed
564f336
